fix: overflow 🤞

--- a/src/styles/master.scss
+++ b/src/styles/master.scss
@@ -11,6 +11,9 @@ html {
 	background-size: 100%;
 
 	font-size: 16px;
+
+	overflow-x: hidden;
+	width: 100%;
 }
 
 body {
@@ -22,6 +25,9 @@ body {
 	font-variant-ligatures: normal;
 
 	overflow-x: hidden;
+	width: 100%;
+	position: relative;
+
 	scroll-behavior: smooth;
 }
 
